# certval-cross

./: .gitignore  Cargo.toml  cross-certs.txt
openssl/: diya-root.pem  elna-intermediate-cs-diya.pem  elna-intermediate.pem  elna-leaf.pem  elna-root.pem  verify.sh
src/: certs.rs  main.rs
