[package]
name = "certval-cross"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
x509-cert = "0.2"

[dependencies.certval]
#git = "https://github.com/carl-wallace/rust-pki"
#package = "certval"
#branch = "main"
version = "0.1"
path = "../../rust-pki/certval"